<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_app_list"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_app_no"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:gravity="start|center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/app_list_item_no_tag"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_app_item_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:gravity="start|center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/app_list_item_name_tag"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="InefficientWeight" />

    <ImageView
        android:id="@+id/iv_app_lock_toggle"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:contentDescription="@string/app_lock_toggle_drawable"
        android:scaleType="center"
        android:src="@drawable/ic_lock_locked_black_36dp" />

</LinearLayout>