<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/monitor_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/monitor_item"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/app_icon_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_icon"
            tools:srcCompat="@tools:sample/avatars[2]" />

        <TextView
            android:id="@+id/daily_usage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/app_icon_iv"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/app_icon_iv"
            android:text="@string/daily_average_usage"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usage_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/app_icon_iv"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/app_icon_iv"
            android:text="@string/usage_level"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daily_usage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/daily_usage_label"
            android:layout_alignBottom="@+id/daily_usage_label"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/custom_progress_view"
            android:layout_toEndOf="@+id/daily_usage_label"
            android:text="@string/sample_usage"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usage_level_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/usage_level_label"
            android:layout_alignBottom="@+id/usage_level_label"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/custom_progress_view"
            android:layout_toEndOf="@+id/usage_level_label"
            android:text="@string/sample_usage_level"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.github.lzyzsd.circleprogress.DonutProgress
            android:id="@+id/custom_progress_view"
            style="?android:attr/progressBarStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:donut_circle_starting_degree="270"
            app:donut_finished_stroke_width="5dp"
            app:donut_max="100"
            app:donut_progress="75"
            app:donut_text_size="11dp"
            app:donut_unfinished_stroke_width="5dp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>

